small search fix on mobile

--- a/assets/scss/components/_footer.scss
+++ b/assets/scss/components/_footer.scss
@@ -11,6 +11,7 @@
   @include query-below($lap){
     text-align: center;
     float: none;
+    padding: 20px 20px 20px 20px;
   }
 
   a:first-child {
